# ProcessGcpMemUsage

./: generate_graph_from_supply_function.py  main.go  setup.cfg
TaskId/: TaskId.go
data/: supply_function.json
data/mrc/: mrc_info.json
google_cluster_data/: clusterdata_trace_format_v3.pb.go
meminfo/: MemInfo.go
pricing_simulator/: __main__.py
pricing_simulator/analyze/: UsageEventIterator.py  __init__.py  analyze.py
pricing_simulator/memcachier_mrc/: __init__.py  gen_mrcs.py
pricing_simulator/proto/: __init__.py  clusterdata_trace_format_v3_pb2.py
script/: download_gcp.sh
src/: __main__.py  argumentParsing.go  clusterdata_trace_format_v3.pb.go  files_process.go  main.go  matching_function.go  mrc_processing.go
src/analyze/: analyze.py
src/download/: __init__.py  download.py
