[bumpversion]
current_version = 0.0.3
commit = True
tag = False

[metadata]
name = pricing_simulator
version = attr: src.VERSION
description = Used to perform various pricing simulations based on Google's cluster usage traces and MRCs generated based on memcachier's traces.

[options]
packages = find:
install_requires = 
	tqdm
	defusedxml

[bumpversion:file:src/__init__.py]
