[bumpversion]
current_version = 0.0.3
commit = True
tag = False

[metadata]
name = simulator
version = attr: pricing_simulator.VERSION
description = Used to perform various pricing simulations based on Google's cluster usage traces and MRCs generated based on memcachier's traces.

[options]
packages = find:
install_requires =
	tqdm
	defusedxml
	protobuf

[options.entry_points]
console_scripts =
	gcp-simulator = pricing_simulator.__main__:main
[bumpversion:file:pricing_simlator/__init__.py]
